--- a/kasper/Kasper.html
+++ b/kasper/Kasper.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First page</title>
+    <title>Kasper</title>
     <script src="https://kit.fontawesome.com/6be1ede9ac.js" crossorigin="anonymous"></script>
 </head>
 
